gnome = import('gnome')
gnome.yelp(
  meson.project_name(),
  sources: [
    'index.page',
    'introduction.page',
    'sketcher.page',
    'complex-data.page',
    'settings.page',
    'legal.xml'
  ],
  media: [
  	'figures/icon.png',
  	'figures/scrot.png',
  	'figures/scrot1.png',
  	'figures/scrot2.png',
  	'figures/sketcher.png'
  ]
)
